Actually fix mobile nav spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,7 @@ nav ul {
   padding-inline-start: 0;
   position: relative;
   text-align: center;
+  -webkit-padding-start: 0;
 }
 
 nav li {
